--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Buzz",
   "version": "1.0",
-  "description": "A simple extension built with SvelteKit",
+  "description": "A simple extension that generates a short quizz based on the content of your current tab then saves it to your local storage.",
   "action": {
     "default_popup": "index.html",
     "default_icon": "icon.png"
