feat: landing page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "buzz-frontend",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -22,10 +22,5 @@
     "tailwindcss": "^4.1.18",
     "typescript": "^5.0.0",
     "vite": "^6.0.0"
-  },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.48.1",
-    "dotenv": "^16.4.7",
-    "tiny-glob": "^0.2.9"
   }
 }
